Changed Seconds to Arriving on PIDS

--- a/common/src/main/resources/assets/mtr/lang/en_us.json
+++ b/common/src/main/resources/assets/mtr/lang/en_us.json
@@ -104,8 +104,8 @@
 	"gui.mtr.arrival_car_cjk": "%s 卡",
 	"gui.mtr.arrival_min": "%s min",
 	"gui.mtr.arrival_min_cjk": "%s 分鐘",
-	"gui.mtr.arrival_sec": "%s sec",
-	"gui.mtr.arrival_sec_cjk": "%s 秒",
+	"gui.mtr.arrival_sec": "Arriving",
+	"gui.mtr.arrival_sec_cjk": "即將抵達",
 	"gui.mtr.available": "Available",
 	"gui.mtr.balance": "Balance: $%s",
 	"gui.mtr.choose_blockbench_file": "Choose Blockbench File",
